force-app/main/default/objects/AutomationController__c/AutomationController__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allows to toggle execution of triggers, flows etc.</description>
    <label>Automation Controller</label>
</CustomObject>