force-app/main/default/objects/AutomationController__c/fields/AccountFlows__c.field-meta.xml
<CustomField>
    <fullName>AccountFlows__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Account flows are activated and will be executed.</description>
    <label>Account Flows</label>
    <type>Checkbox</type>
</CustomField>