force-app/main/default/objects/AutomationController__c/fields/BerechnungFlows__c.field-meta.xml
<CustomField>
    <fullName>BerechnungFlows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Berechnung Flows</label>
    <type>Checkbox</type>
</CustomField>