force-app/main/default/objects/AutomationController__c/fields/ContactFlows__c.field-meta.xml
<CustomField>
    <fullName>ContactFlows__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Contact flows are activated and will be executed.</description>
    <label>Contact Flows</label>
    <type>Checkbox</type>
</CustomField>