force-app/main/default/objects/AutomationController__c/fields/GutschriftFlows__c.field-meta.xml
<CustomField>
    <fullName>GutschriftFlows__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Gutschrift Flows</label>
    <type>Checkbox</type>
</CustomField>