force-app/main/default/objects/AutomationController__c/fields/NKZFlows__c.field-meta.xml
<CustomField>
    <fullName>NKZFlows__c</fullName>
    <defaultValue>true</defaultValue>
    <label>NKZ Flows</label>
    <type>Checkbox</type>
</CustomField>